Revrite css to scss

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,6 +8,7 @@
 @import 'base.scss';
 
 @import './components/container.scss';
+@import './components/section-titles.scss';
 
 @import './section/header.scss';
 @import './section/about.scss';
