--- a/src/sass/section/team.scss
+++ b/src/sass/section/team.scss
@@ -1,14 +1,10 @@
 .team {
   padding-bottom: 84px;
 }
-.section-title_position-team {
+.section-title__position-team {
   margin-bottom: 40px;
 }
-.team-description__wripper {
-  max-width: 940px;
-  margin: 0 auto;
-  margin-bottom: 86px;
-}
+
 .team-description {
   font-family: $secondary-font;
   font-size: 15px;
@@ -17,32 +13,53 @@
   font-weight: 400;
   line-height: 1.6;
   text-align: center;
+  &__wripper {
+    max-width: 940px;
+    margin: 0 auto;
+    margin-bottom: 86px;
+  }
 }
-.team__member-list {
-  display: flex;
-  justify-content: space-between;
+
+.team-member {
+  &__list {
+    display: flex;
+    justify-content: space-between;
+  }
+  &__list-wrapper {
+    position: relative;
+    transition: all 200ms linear;
+  }
+  &__name {
+    font-family: $main-font;
+    font-size: 14px;
+    color: #333333;
+    text-transform: uppercase;
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 4px;
+  }
+  &__position {
+    font-style: $secondary-font;
+    font-style: italic;
+    text-align: center;
+    color: #999999;
+    font-weight: 400;
+    line-height: 24px;
+  }
+  &__list-item:hover {
+    .overlay {
+      opacity: 1;
+      visibility: visible;
+      box-shadow: rgb(149, 225, 211) 10px 10px;
+    }
+  }
+  &__list-item:hover {
+    .team-member__list-wrapper {
+      transform: translate(-10px, -10px);
+    }
+  }
 }
-.team__member-list-wrapper {
-  position: relative;
-  transition: all 200ms linear;
-}
-.team__member-name {
-  font-family: $main-font;
-  font-size: 14px;
-  color: #333333;
-  text-transform: uppercase;
-  text-align: center;
-  margin-top: 30px;
-  margin-bottom: 4px;
-}
-.team__member-position {
-  font-style: $secondary-font;
-  font-style: italic;
-  text-align: center;
-  color: #999999;
-  font-weight: 400;
-  line-height: 24px;
-}
+
 .overlay {
   width: 100%;
   height: 100%;
@@ -75,38 +92,29 @@
 }
 .overlay-list {
   display: flex;
+  &__item:not(:last-child) {
+    margin-right: 1px;
+  }
+  &__item-link {
+    display: flex;
+    align-items: center;
+    background-color: rgb(252, 227, 138);
+    width: 56px;
+    height: 56px;
+    cursor: pointer;
+    transition: all 0.2s linear;
+    &:hover {
+      background-color: rgb(243, 129, 129);
+      .social-svg {
+        fill: #ffffff;
+      }
+    }
+  }
 }
-.overlay-list__item:not(:last-child) {
-  margin-right: 1px;
-}
-.overlay-list__item-link {
-  display: flex;
-  align-items: center;
-  background-color: rgb(252, 227, 138);
-  width: 56px;
-  height: 56px;
-  cursor: pointer;
-  transition: all 0.2s linear;
-}
+
 .social-svg {
   fill: rgb(243, 129, 129);
   width: 32px;
   height: 32px;
   margin: 0 auto;
-}
-.team__member-list-item:hover .overlay {
-  opacity: 1;
-  visibility: visible;
-
-  box-shadow: rgb(149, 225, 211) 10px 10px;
-}
-
-.team__member-list-item:hover .team__member-list-wrapper {
-  transform: translate(-10px, -10px);
-}
-.overlay-list__item-link:hover {
-  background-color: rgb(243, 129, 129);
-}
-.overlay-list__item-link:hover .social-svg {
-  fill: #ffffff;
 }
