add plaseholders and mexins

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,6 +5,8 @@
 @import 'normalize.scss';
 @import './helpers/fonts.scss';
 @import './helpers/variables.scss';
+@import './helpers/placeholders.scss';
+@import './helpers/mexins.scss';
 @import 'base.scss';
 
 @import './components/container.scss';
