--- a/src/sass/components/section-titles.scss
+++ b/src/sass/components/section-titles.scss
@@ -1,16 +1,14 @@
 .section-title__lower-item {
+  @include font-arguments(30px, 700);
   text-align: center;
   text-transform: uppercase;
   font-family: $main-font;
-  font-size: 30px;
-  font-weight: 700;
 }
 .section-title__upper-item {
+  @include font-arguments(24px, 400);
   display: flex;
   justify-content: center;
   font-family: $title-description-font;
-  font-size: 24px;
-  font-weight: 400;
   text-transform: none;
   margin-bottom: 14px;
 }
